--- a/src/components/form/Input.sass
+++ b/src/components/form/Input.sass
@@ -1,23 +1,27 @@
-.input-group
-    position: relative
-
 .input
     position: absolute
     font-size: 100%
-    padding: 0.8em
+    padding: 20px 0 20px 10px
     outline: none
-    border: 2px solid rgb(200, 200, 200)
+    border: 2px solid rgb(165, 165, 199)
+    carat-color: rgb(110, 110, 117)
     background-color: transparent
     border-radius: 20px
 
 
 label
     position: absolute
+    color: rgb(165, 165, 199)
     transform-origin: top left
+    font-weight: bold
+    padding-left: 10px
     transform: translate(0, 16px) scale(1)
     transition: all .1s ease-in-out
 
 
 .input-group :is(.input:focus, .input:valid)~label
     transform: translate(30px, -5px) scale(.90)
-    background-color: #e8e8e8
+    color: #f1eded
+    border-radius: 10px
+    padding: 2px 10px
+    background-color: rgb(165, 165, 199)
