--- a/src/components/title/title.sass
+++ b/src/components/title/title.sass
@@ -1,3 +1,8 @@
+$blue: #2e90d9
+$magenta: #df5086
+$yellow: #e7cd3a
+$green: #bfeeaa
+    
 .Title
     font-size: 100px
     text-transform: uppercase
@@ -28,24 +33,35 @@
 
 .Title span:nth-child(1) 
     animation-delay: 0s
+    color: $blue
 .Title span:nth-child(2) 
     animation-delay: .1s
+    color: $magenta
 .Title span:nth-child(3) 
     animation-delay: .2s
+    color: $yellow
 .Title span:nth-child(4) 
     animation-delay: .3s
+    color: $green
 .Title span:nth-child(5) 
     animation-delay: .4s
+    color: $blue
 .Title span:nth-child(6) 
     animation-delay: .5s
+    color: $magenta
 .Title span:nth-child(7) 
     animation-delay: .6s
+    color: $yellow
 .Title span:nth-child(8) 
     animation-delay: .7s
+    color: $green
 .Title span:nth-child(9) 
     animation-delay: .8s
+    color: $blue
 .Title span:nth-child(10) 
     animation-delay: .9s
+    color: $magenta
 .Title span:nth-child(11) 
     animation-delay: 1s
+    color: $yellow
 
