Added routes and sidebar functionality

--- a/src/App.sass
+++ b/src/App.sass
@@ -4,8 +4,16 @@ body
 h1
     text-transform: uppercase
     color: #b6acac
+
 .App
     display: flex
+
+
+
+.view
+    width: 100vh
+    display: flex
+    position: relative
     flex-direction: column
     justify-content: center
     align-items: center
