--- a/src/components/form/Input.sass
+++ b/src/components/form/Input.sass
@@ -1,3 +1,8 @@
+.input-group
+    position: relative
+    width: 30vh
+    height: 64px
+
 .input
     position: absolute
     font-size: 100%
@@ -10,6 +15,7 @@
 
 
 label
+    display: block
     position: absolute
     color: rgb(165, 165, 199)
     transform-origin: top left
