--- a/src/components/title/title.sass
+++ b/src/components/title/title.sass
@@ -4,7 +4,8 @@ $yellow: #e7cd3a
 $green: #bfeeaa
     
 .Title
-    font-size: 100px
+    font-size: 27px
+    white-space: nowrap
     text-transform: uppercase
 
 .Title span 
