--- a/src/App.sass
+++ b/src/App.sass
@@ -11,9 +11,10 @@ h1
 
 
 .view
+    margin-left: 26vh
+    padding: 0 40px
     width: 100%
     display: flex
     position: relative
     flex-direction: column
-    justify-content: center
     align-items: center
