--- a/src/components/common/Sidebar/Sidebar.sass
+++ b/src/components/common/Sidebar/Sidebar.sass
@@ -1,5 +1,9 @@
 .sidebar
+    display: block
+    position: fixed
+    background-color: transparent
     width: 26vh
+    height: 99vh
 
 .header
     margin: 20px 8px
