--- a/src/App.sass
+++ b/src/App.sass
@@ -1,9 +1,13 @@
 body
     background: rgb(248, 246, 238)
 
-h1
+h1, h2
     text-transform: uppercase
     color: #b6acac
+
+p
+    font-family: 'Segoe UI', sans-serif
+    color: #6f6767
 
 .App
     display: flex
@@ -14,7 +18,9 @@ h1
     margin-left: 26vh
     padding: 0 40px
     width: 100%
+    height: 100vh
     display: flex
     position: relative
     flex-direction: column
     align-items: center
+    place-content: space-between
