--- a/src/components/common/Sidebar/Sidebar.sass
+++ b/src/components/common/Sidebar/Sidebar.sass
@@ -3,11 +3,18 @@
     position: fixed
     background-color: transparent
     width: 26vh
-    height: 99vh
+    height: 100vh
 
 .header
     margin: 20px 8px
     user-select: none
+    .header-link
+        font-size: 20px
+    .header-link:link
+        text-decoration: none
+    .header-link:visited
+        color: inherit
+        text-decoration: none
 
 
 .sidebar-group
